# pbmodular

./: Cargo.toml  README.md
src/: lib.rs  ui_command.rs
src/dspmodules/: dspmodule.rs  gain.rs  input.rs  mod.rs  multi_mixdown.rs  multi_parallel.rs  multi_range.rs  number.rs  parallel.rs  param.rs  pass.rs  root.rs  sampledelay.rs  svf_bp.rs  value.rs
src/nrtmodules/: blank.rs  gain.rs  input.rs  mod.rs  modal_filter.rs  nrtmodule.rs  parallel.rs  test.rs  test2.rs  testinput.rs
